// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZForm demo -- base 1`] = `
.emotion-50 {
  font-size: 12px;
}

.emotion-50 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-50 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-8 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-8:before,
.emotion-8:after {
  content: ' ';
  display: table;
}

.emotion-8:after {
  clear: both;
}

.emotion-8 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-50 {
  font-size: 12px;
}

.emotion-50 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-50 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-8 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-8:before,
.emotion-8:after {
  content: ' ';
  display: table;
}

.emotion-8:after {
  clear: both;
}

.emotion-8 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

<form
  class="uc-fe-form emotion-50 emotion-70"
>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8 emotion-9"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      input_1
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8 emotion-9"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      input_2
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8 emotion-9"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      input_3
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8 emotion-9"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      checkbox_1
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        checked=""
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8 emotion-9"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      checkbox_2
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        type="checkbox"
      />
    </div>
  </div>
  <p
    class="u-red"
  />
  <button
    type="button"
  >
    submit
  </button>
</form>
`;

exports[`ZForm demo -- name 1`] = `
.emotion-90 {
  font-size: 12px;
}

.emotion-90 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-90 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-8 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-8:before,
.emotion-8:after {
  content: ' ';
  display: table;
}

.emotion-8:after {
  clear: both;
}

.emotion-8 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-90 {
  font-size: 12px;
}

.emotion-90 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-90 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-8 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-8:before,
.emotion-8:after {
  content: ' ';
  display: table;
}

.emotion-8:after {
  clear: both;
}

.emotion-8 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

<form
  class="uc-fe-form emotion-90 emotion-70"
>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8 emotion-9"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      input 0
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8 emotion-9"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      input 1
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8 emotion-9"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      input 2
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8 emotion-9"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      checkbox first
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        checked=""
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8 emotion-9"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      checkbox second
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8 emotion-9"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      checkbox third
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8 emotion-9"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      a.b.c.d
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8 emotion-9"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      r[0][1][2][3]
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8 emotion-9"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      z[0].a[1].b[2]
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <button
    type="button"
  >
    submit
  </button>
</form>
`;

exports[`ZForm demo -- rule 1`] = `
.emotion-155 {
  font-size: 12px;
}

.emotion-155 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-155 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-10 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-10:before,
.emotion-10:after {
  content: ' ';
  display: table;
}

.emotion-10:after {
  clear: both;
}

.emotion-10 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-3 {
  position: relative;
  box-sizing: border-box;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-3:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-3 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: rgba(10,22,51,0.2);
  fill: rgba(10,22,51,0.2);
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-3 .uc-fe-input-clear:hover {
  color: #7a8baa;
  fill: #7a8baa;
}

.emotion-3 .uc-fe-input-wrap,
.emotion-3 .uc-fe-input-prefix,
.emotion-3 .uc-fe-input-suffix,
.emotion-3 .uc-fe-input-clear,
.emotion-3 input {
  padding: 0 4px;
}

.emotion-3.uc-fe-input-block {
  display: block;
}

.emotion-3 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 .uc-fe-input-prefix,
.emotion-3 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-3 .uc-fe-input-block-wrap {
  height: 18px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0px;
}

.emotion-3 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-3 input,
.emotion-3 input:hover,
.emotion-3 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-3 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-3 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-3 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-3 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-3 input::-ms-clear {
  display: none;
}

.emotion-32 {
  margin-top: 4px;
  color: #526075;
}

.emotion-32 > .uc-fe-combine-item,
.emotion-32 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-32 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-32 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-32 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-32 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-32 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 4px;
}

.emotion-32 .uc-fe-form-tip-content {
  line-height: 20px;
}

.emotion-32 .uc-fe-form-tip-icon {
  fill: #3860f4;
}

.emotion-29 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-48 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  min-height: 28px;
  line-height: 28px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.emotion-48 > * {
  font-size: 12px;
}

.emotion-48 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-48.uc-fe-checkbox-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-48:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.emotion-46.uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  vertical-align: middle;
}

.emotion-46 .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-46.uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.emotion-46 .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.emotion-44 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 14px;
  height: 14px;
}

.emotion-69 {
  box-sizing: border-box;
  position: relative;
  max-width: 100%;
  min-width: 80px;
  font-size: 12px;
  color: #0a1633;
  display: inline-block;
  vertical-align: middle;
}

.emotion-67 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-67,
.emotion-67 input,
.emotion-67 .emotion-61 {
  padding: 0 4px;
}

.emotion-67:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-67 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-67 input,
.emotion-67 input:hover,
.emotion-67 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-67 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-67 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-67 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-67 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-67 input::-ms-clear {
  display: none;
}

.emotion-67 .uc-fe-select-input-wrap {
  position: relative;
  overflow: hidden;
}

.emotion-67 .uc-fe-select-input-wrap:empty {
  display: initial;
}

.emotion-67 .uc-fe-select-input {
  cursor: pointer;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.emotion-67 .uc-fe-select-placeholder {
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-67 .uc-fe-select-clear {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-60 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.emotion-60:empty {
  display: none;
}

.emotion-64 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-64:empty {
  display: none;
}

.emotion-88 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-88,
.emotion-88 input,
.emotion-88 .emotion-61 {
  padding: 0 4px;
}

.emotion-88:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-88 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-88 input,
.emotion-88 input:hover,
.emotion-88 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-88 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-88 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-88 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-88 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-88 input::-ms-clear {
  display: none;
}

.emotion-88 .uc-fe-select-input-wrap {
  position: relative;
  overflow: hidden;
}

.emotion-88 .uc-fe-select-input-wrap:empty {
  display: initial;
}

.emotion-88 .uc-fe-select-input {
  cursor: pointer;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.emotion-88 .uc-fe-select-placeholder {
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-88 .uc-fe-select-clear {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-88:hover .uc-fe-select-clear {
  opacity: 1;
  cursor: pointer;
}

.emotion-144 {
  padding: 16px;
  border: 1px solid #d2d6ea;
  background: #f6f6fb;
}

* + .emotion-144 {
  margin-top: 12px;
}

.emotion-144 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-153 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 2px 4px -1px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
}

.emotion-153:link,
.emotion-153:visited {
  color: #ffffff;
}

.emotion-153:hover,
.emotion-153:active {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
}

.emotion-155 {
  font-size: 12px;
}

.emotion-155 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-155 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-10 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-10:before,
.emotion-10:after {
  content: ' ';
  display: table;
}

.emotion-10:after {
  clear: both;
}

.emotion-10 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-3 {
  position: relative;
  box-sizing: border-box;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-3:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-3 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: rgba(10,22,51,0.2);
  fill: rgba(10,22,51,0.2);
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-3 .uc-fe-input-clear:hover {
  color: #7a8baa;
  fill: #7a8baa;
}

.emotion-3 .uc-fe-input-wrap,
.emotion-3 .uc-fe-input-prefix,
.emotion-3 .uc-fe-input-suffix,
.emotion-3 .uc-fe-input-clear,
.emotion-3 input {
  padding: 0 4px;
}

.emotion-3.uc-fe-input-block {
  display: block;
}

.emotion-3 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 .uc-fe-input-prefix,
.emotion-3 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-3 .uc-fe-input-block-wrap {
  height: 18px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0px;
}

.emotion-3 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-3 input,
.emotion-3 input:hover,
.emotion-3 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-3 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-3 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-3 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-3 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-3 input::-ms-clear {
  display: none;
}

.emotion-32 {
  margin-top: 4px;
  color: #526075;
}

.emotion-32 > .uc-fe-combine-item,
.emotion-32 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-32 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-32 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-32 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-32 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-32 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 4px;
}

.emotion-32 .uc-fe-form-tip-content {
  line-height: 20px;
}

.emotion-32 .uc-fe-form-tip-icon {
  fill: #3860f4;
}

.emotion-29 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-48 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  min-height: 28px;
  line-height: 28px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.emotion-48 > * {
  font-size: 12px;
}

.emotion-48 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-48.uc-fe-checkbox-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-48:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.emotion-46.uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  vertical-align: middle;
}

.emotion-46 .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-46.uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.emotion-46 .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.emotion-44 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 14px;
  height: 14px;
}

.emotion-69 {
  box-sizing: border-box;
  position: relative;
  max-width: 100%;
  min-width: 80px;
  font-size: 12px;
  color: #0a1633;
  display: inline-block;
  vertical-align: middle;
}

.emotion-67 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-67,
.emotion-67 input,
.emotion-67 .emotion-61 {
  padding: 0 4px;
}

.emotion-67:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-67 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-67 input,
.emotion-67 input:hover,
.emotion-67 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-67 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-67 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-67 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-67 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-67 input::-ms-clear {
  display: none;
}

.emotion-67 .uc-fe-select-input-wrap {
  position: relative;
  overflow: hidden;
}

.emotion-67 .uc-fe-select-input-wrap:empty {
  display: initial;
}

.emotion-67 .uc-fe-select-input {
  cursor: pointer;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.emotion-67 .uc-fe-select-placeholder {
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-67 .uc-fe-select-clear {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-60 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.emotion-60:empty {
  display: none;
}

.emotion-64 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-64:empty {
  display: none;
}

.emotion-88 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-88,
.emotion-88 input,
.emotion-88 .emotion-61 {
  padding: 0 4px;
}

.emotion-88:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-88 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-88 input,
.emotion-88 input:hover,
.emotion-88 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-88 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-88 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-88 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-88 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-88 input::-ms-clear {
  display: none;
}

.emotion-88 .uc-fe-select-input-wrap {
  position: relative;
  overflow: hidden;
}

.emotion-88 .uc-fe-select-input-wrap:empty {
  display: initial;
}

.emotion-88 .uc-fe-select-input {
  cursor: pointer;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.emotion-88 .uc-fe-select-placeholder {
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-88 .uc-fe-select-clear {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-88:hover .uc-fe-select-clear {
  opacity: 1;
  cursor: pointer;
}

.emotion-144 {
  padding: 16px;
  border: 1px solid #d2d6ea;
  background: #f6f6fb;
}

* + .emotion-144 {
  margin-top: 12px;
}

.emotion-144 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-153 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 2px 4px -1px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
}

.emotion-153:link,
.emotion-153:visited {
  color: #ffffff;
}

.emotion-153:hover,
.emotion-153:active {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
}

<form
  class="uc-fe-form emotion-155 emotion-90"
>
  <div
    class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      input_1
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
      span="5"
    >
      <span
        class="uc-fe-input emotion-3 emotion-4"
      >
        <span
          class="uc-fe-input-wrap"
        >
          <span
            class="uc-fe-input-block-wrap"
          >
            <input
              value=""
            />
          </span>
        </span>
      </span>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      input_2
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
      span="5"
    >
      <span
        class="uc-fe-input emotion-3 emotion-4"
      >
        <span
          class="uc-fe-input-wrap"
        >
          <span
            class="uc-fe-input-block-wrap"
          >
            <input
              value=""
            />
          </span>
        </span>
      </span>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      input_3
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
      span="5"
    >
      <span
        class="uc-fe-input emotion-3 emotion-4"
      >
        <span
          class="uc-fe-input-wrap"
        >
          <span
            class="uc-fe-input-block-wrap"
          >
            <input
              value=""
            />
          </span>
        </span>
      </span>
      <div
        class="uc-fe-combine uc-fe-form-tip emotion-91 emotion-32 emotion-33"
        spacing="sm"
      >
        <div
          class="uc-fe-combine-item"
        >
          <div
            class="uc-fe-form-tip-icon"
          >
            <svg
              class="uc-fe-form-tip-icon emotion-29 emotion-30"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
                transform="matrix(1 0 0 -1 0 24)"
              />
            </svg>
          </div>
        </div>
        <div
          class="uc-fe-combine-item"
        >
          <div
            class="uc-fe-form-tip-content"
          >
            this is required
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      checkbox_1
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
      span="5"
    >
      <span
        checked=""
        class="uc-fe-checkbox uc-fe-checkbox-checked emotion-48 emotion-49"
      >
        <span
          checked=""
          class="uc-fe-checkbox-icon-wrap emotion-46 emotion-47"
        >
          <svg
            class="uc-fe-checkbox-icon emotion-44 emotion-30"
            viewBox="0 0 24 24"
          >
            <path
              d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      select_1
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
      span="5"
    >
      <div
        class="emotion-69 emotion-70"
      >
        <span
          class="uc-fe-select-input emotion-66 emotion-67 emotion-68"
        >
          <span
            class="uc-fe-select-input-wrap emotion-60 emotion-61"
          >
            <span
              class="uc-fe-select-placeholder"
              style="visibility:visible;opacity:1"
            >
              请选择
            </span>
          </span>
          <span
            class="emotion-64 emotion-61"
          >
            <svg
              class=" emotion-29 emotion-30"
              style="visibility:visible"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.3986407,8.65510743 L12,14.8300075 L5.60135725,8.65510548 C5.14150935,8.21129878 4.43778366,8.2575662 4.03031254,8.75528212 C3.62357936,9.25209665 3.66385814,10.0131726 4.12257613,10.4558888 L11.2606084,17.34492 C11.6820987,17.7517071 12.3179013,17.7517071 12.7393916,17.34492 L19.8774239,10.4558888 C20.3361419,10.0131726 20.3764206,9.25209665 19.9696875,8.75528212 C19.5622163,8.25756621 18.8584907,8.21129878 18.3986407,8.65510743 Z"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      select_2
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
      span="5"
    >
      <div
        class="emotion-69 emotion-70"
      >
        <span
          class="uc-fe-select-input emotion-66 emotion-88 emotion-68"
        >
          <span
            class="uc-fe-select-input-wrap emotion-60 emotion-61"
          >
            <span
              class="uc-fe-select-placeholder"
              style="visibility:visible;opacity:1"
            >
              label-1
            </span>
          </span>
          <span
            class="emotion-64 emotion-61"
          >
            <svg
              class=" emotion-29 emotion-30"
              style="visibility:visible"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.3986407,8.65510743 L12,14.8300075 L5.60135725,8.65510548 C5.14150935,8.21129878 4.43778366,8.2575662 4.03031254,8.75528212 C3.62357936,9.25209665 3.66385814,10.0131726 4.12257613,10.4558888 L11.2606084,17.34492 C11.6820987,17.7517071 12.3179013,17.7517071 12.7393916,17.34492 L19.8774239,10.4558888 C20.3361419,10.0131726 20.3764206,9.25209665 19.9696875,8.75528212 C19.5622163,8.25756621 18.8584907,8.21129878 18.3986407,8.65510743 Z"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      区域
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
      span="5"
    >
      <div
        class="uc-fe-form-sub-area emotion-144 emotion-94"
      >
        <div
          class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
        >
          <div
            class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
            span="2"
          >
            sub_item_1
          </div>
          <div
            class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
            span="5"
          >
            <div
              class="emotion-69 emotion-70"
            >
              <span
                class="uc-fe-select-input emotion-66 emotion-67 emotion-68"
              >
                <span
                  class="uc-fe-select-input-wrap emotion-60 emotion-61"
                >
                  <span
                    class="uc-fe-select-placeholder"
                    style="visibility:visible;opacity:1"
                  >
                    请选择
                  </span>
                </span>
                <span
                  class="emotion-64 emotion-61"
                >
                  <svg
                    class=" emotion-29 emotion-30"
                    style="visibility:visible"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18.3986407,8.65510743 L12,14.8300075 L5.60135725,8.65510548 C5.14150935,8.21129878 4.43778366,8.2575662 4.03031254,8.75528212 C3.62357936,9.25209665 3.66385814,10.0131726 4.12257613,10.4558888 L11.2606084,17.34492 C11.6820987,17.7517071 12.3179013,17.7517071 12.7393916,17.34492 L19.8774239,10.4558888 C20.3361419,10.0131726 20.3764206,9.25209665 19.9696875,8.75528212 C19.5622163,8.25756621 18.8584907,8.21129878 18.3986407,8.65510743 Z"
                      transform="matrix(-1 0 0 1 24 0)"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
        >
          <div
            class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
            span="2"
          >
            sub_item_2
          </div>
          <div
            class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
            span="5"
          >
            <div
              class="emotion-69 emotion-70"
            >
              <span
                class="uc-fe-select-input emotion-66 emotion-88 emotion-68"
              >
                <span
                  class="uc-fe-select-input-wrap emotion-60 emotion-61"
                >
                  <span
                    class="uc-fe-select-placeholder"
                    style="visibility:visible;opacity:1"
                  >
                    label-1
                  </span>
                </span>
                <span
                  class="emotion-64 emotion-61"
                >
                  <svg
                    class=" emotion-29 emotion-30"
                    style="visibility:visible"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18.3986407,8.65510743 L12,14.8300075 L5.60135725,8.65510548 C5.14150935,8.21129878 4.43778366,8.2575662 4.03031254,8.75528212 C3.62357936,9.25209665 3.66385814,10.0131726 4.12257613,10.4558888 L11.2606084,17.34492 C11.6820987,17.7517071 12.3179013,17.7517071 12.7393916,17.34492 L19.8774239,10.4558888 C20.3361419,10.0131726 20.3764206,9.25209665 19.9696875,8.75528212 C19.5622163,8.25756621 18.8584907,8.21129878 18.3986407,8.65510743 Z"
                      transform="matrix(-1 0 0 1 24 0)"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary emotion-153 emotion-154"
    type="button"
  >
    submit
  </button>
</form>
`;

exports[`ZForm demo -- uhost 1`] = `
.emotion-145 {
  font-size: 12px;
}

.emotion-145 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-145 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-67 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-67:before,
.emotion-67:after {
  content: ' ';
  display: table;
}

.emotion-67:after {
  clear: both;
}

.emotion-67 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-127 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-134 {
  box-sizing: border-box;
  position: relative;
  max-width: 100%;
  min-width: 80px;
  font-size: 12px;
  color: #0a1633;
  display: inline-block;
  vertical-align: middle;
}

.emotion-125 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.emotion-125:empty {
  display: none;
}

.emotion-129 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-129:empty {
  display: none;
}

.emotion-143 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 2px 4px -1px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
}

.emotion-143:link,
.emotion-143:visited {
  color: #ffffff;
}

.emotion-143:hover,
.emotion-143:active {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
}

.emotion-63 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-60 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-60 .uc-fe-radio-styletype-default,
.emotion-60 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-60 .uc-fe-radio-styletype-default:last-child,
.emotion-60 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-60 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-60 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-60 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-60 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-60 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-60 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-60 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-4 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
  color: #3860f4;
  fill: #3860f4;
  background: #e3e9ff;
  border-color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-4:link,
.emotion-4:visited {
  color: #526075;
}

.emotion-4:hover,
.emotion-4:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #fafafc;
}

.emotion-4:hover {
  background: #e3e9ff;
}

.emotion-4.emotion-4 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
  z-index: 2;
}

.emotion-4.emotion-4:hover {
  z-index: 3;
}

.emotion-7 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-7:link,
.emotion-7:visited {
  color: #526075;
}

.emotion-7:hover,
.emotion-7:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #fafafc;
}

.emotion-7.emotion-7 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
}

.emotion-7.emotion-7:hover {
  z-index: 3;
}

.emotion-105 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  width: 73px;
}

.emotion-105 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-105 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-105 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-105 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-105 .uc-fe-switch-tip-on,
.emotion-105 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-105 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-105 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-105 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-105 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-105:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-105 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-105 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-105 .uc-fe-switch-tip-on {
  display: none;
}

.emotion-132 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: text;
}

.emotion-132,
.emotion-132 input,
.emotion-132 .emotion-126 {
  padding: 0 4px;
}

.emotion-132:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-132 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-132 input,
.emotion-132 input:hover,
.emotion-132 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-132 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-132 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-132 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-132 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-132 input::-ms-clear {
  display: none;
}

.emotion-132 .uc-fe-select-input-wrap {
  position: relative;
  overflow: hidden;
}

.emotion-132 .uc-fe-select-input-wrap:empty {
  display: initial;
}

.emotion-132 .uc-fe-select-input {
  cursor: text;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.emotion-132 .uc-fe-select-placeholder {
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-132 .uc-fe-select-clear {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-145 {
  font-size: 12px;
}

.emotion-145 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-145 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-67 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-67:before,
.emotion-67:after {
  content: ' ';
  display: table;
}

.emotion-67:after {
  clear: both;
}

.emotion-67 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-127 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-134 {
  box-sizing: border-box;
  position: relative;
  max-width: 100%;
  min-width: 80px;
  font-size: 12px;
  color: #0a1633;
  display: inline-block;
  vertical-align: middle;
}

.emotion-125 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.emotion-125:empty {
  display: none;
}

.emotion-129 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-129:empty {
  display: none;
}

.emotion-143 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 2px 4px -1px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
}

.emotion-143:link,
.emotion-143:visited {
  color: #ffffff;
}

.emotion-143:hover,
.emotion-143:active {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
}

.emotion-63 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-60 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-60 .uc-fe-radio-styletype-default,
.emotion-60 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-60 .uc-fe-radio-styletype-default:last-child,
.emotion-60 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-60 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-60 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-60 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-60 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-60 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-60 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-60 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-4 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
  color: #3860f4;
  fill: #3860f4;
  background: #e3e9ff;
  border-color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-4:link,
.emotion-4:visited {
  color: #526075;
}

.emotion-4:hover,
.emotion-4:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #fafafc;
}

.emotion-4:hover {
  background: #e3e9ff;
}

.emotion-4.emotion-4 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
  z-index: 2;
}

.emotion-4.emotion-4:hover {
  z-index: 3;
}

.emotion-7 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-7:link,
.emotion-7:visited {
  color: #526075;
}

.emotion-7:hover,
.emotion-7:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #fafafc;
}

.emotion-7.emotion-7 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
}

.emotion-7.emotion-7:hover {
  z-index: 3;
}

.emotion-105 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  width: 73px;
}

.emotion-105 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-105 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-105 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-105 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-105 .uc-fe-switch-tip-on,
.emotion-105 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-105 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-105 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-105 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-105 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-105:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-105 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-105 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-105 .uc-fe-switch-tip-on {
  display: none;
}

.emotion-132 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: text;
}

.emotion-132,
.emotion-132 input,
.emotion-132 .emotion-126 {
  padding: 0 4px;
}

.emotion-132:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-132 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-132 input,
.emotion-132 input:hover,
.emotion-132 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-132 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-132 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-132 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-132 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-132 input::-ms-clear {
  display: none;
}

.emotion-132 .uc-fe-select-input-wrap {
  position: relative;
  overflow: hidden;
}

.emotion-132 .uc-fe-select-input-wrap:empty {
  display: initial;
}

.emotion-132 .uc-fe-select-input {
  cursor: text;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.emotion-132 .uc-fe-select-placeholder {
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-132 .uc-fe-select-clear {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

<form
  class="uc-fe-form emotion-145 emotion-660"
>
  <div
    class="uc-fe-row uc-fe-form-item emotion-65 emotion-66 emotion-67 emotion-68"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      地域
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-62 emotion-63 emotion-2"
      span="10"
    >
      <div
        class="emotion-60 emotion-61"
      >
        <button
          checked=""
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-5"
          type="button"
        >
          cn-zj
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          cn-bj1
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          hk
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          cn-bj2
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          us-ca
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          cn-gd
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          cn-sh
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          cn-sh2
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          us-ws
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          ge-fra
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          th-bkk
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          kr-seoul
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          sg
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          tw-kh
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          rus-mosc
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          jpn-tky
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          tw-tp
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          uae-dubai
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          idn-jakarta
        </button>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-65 emotion-66 emotion-67 emotion-68"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      可用区
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-62 emotion-63 emotion-2"
      span="10"
    >
      <div
        class="emotion-60 emotion-61"
      >
        <button
          checked=""
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-5"
          type="button"
        >
          cn-zj-01
        </button>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-65 emotion-66 emotion-67 emotion-68"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      系列
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-62 emotion-63 emotion-2"
      span="10"
    >
      <div
        class="emotion-60 emotion-61"
      >
        <button
          checked=""
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-5"
          type="button"
        >
          系列1
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          系列2
        </button>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-65 emotion-66 emotion-67 emotion-68"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      网络增强
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-62 emotion-63 emotion-2"
      span="10"
    >
      <div
        class="emotion-105 emotion-106"
      >
        <span
          class="uc-fe-switch-inner"
        >
          <span
            class="uc-fe-switch-tip-on"
          >
            ON
          </span>
          <span
            class="uc-fe-switch-tip-off"
          >
            OFF
          </span>
        </span>
        <span
          class="uc-fe-switch-button"
        >
          <span>
            <span
              class="uc-fe-switch-dot"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-65 emotion-66 emotion-67 emotion-68"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      镜像
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-62 emotion-63 emotion-2"
      span="10"
    >
      <div
        class="emotion-60 emotion-61"
      >
        <button
          checked=""
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-5"
          type="button"
        >
          标准
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          自制
        </button>
      </div>
      <div
        class="emotion-134 emotion-135"
      >
        <span
          class="uc-fe-select-input emotion-131 emotion-132 emotion-133"
        >
          <span
            class="uc-fe-select-input-wrap emotion-125 emotion-126"
          >
            <span
              class="uc-fe-select-placeholder"
              style="visibility:visible;opacity:1"
            >
              请选择
            </span>
            <input
              class="uc-fe-select-input"
              value=""
            />
          </span>
          <span
            class="emotion-129 emotion-126"
          >
            <svg
              class=" emotion-127 emotion-128"
              style="visibility:visible"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.3986407,8.65510743 L12,14.8300075 L5.60135725,8.65510548 C5.14150935,8.21129878 4.43778366,8.2575662 4.03031254,8.75528212 C3.62357936,9.25209665 3.66385814,10.0131726 4.12257613,10.4558888 L11.2606084,17.34492 C11.6820987,17.7517071 12.3179013,17.7517071 12.7393916,17.34492 L19.8774239,10.4558888 C20.3361419,10.0131726 20.3764206,9.25209665 19.9696875,8.75528212 C19.5622163,8.25756621 18.8584907,8.21129878 18.3986407,8.65510743 Z"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
  <p
    class="u-red"
  />
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary emotion-143 emotion-5"
    type="button"
  >
    submit
  </button>
</form>
`;
